# nonebot-plugin-WWwiki

./: LICENSE  README.md  pyproject.toml
nonebot_plugin_WWwiki/: __init__.py  activities.py  basicinformation.py  config.py  echo.py  echocard.py  ehcocard.py  enemy.py  getarchives.py  gethtml.py  getmaterial.py  getskll.py  help.py  itemlink.py  judgmentrolename.py  model.py  recommendation.py  role_list.py  rolearchives.py  rolecard.py  rolegift.py  rolelink.py  rolematerial.py  roleskll.py  roletale.py  util.py  weapon.py  yituliu.py
nonebot_plugin_WWwiki/data/: activities.json
nonebot_plugin_WWwiki/html_template/activity/: template.html
nonebot_plugin_WWwiki/html_template/archives/: out_page.html  template.html
nonebot_plugin_WWwiki/html_template/card_pool/: activities (2).html  template.html
nonebot_plugin_WWwiki/html_template/classify/: template.html
nonebot_plugin_WWwiki/html_template/echo/: out_page.html  template.html
nonebot_plugin_WWwiki/html_template/echolink/: ehcolink.html  template.html
nonebot_plugin_WWwiki/html_template/ehcolink/: out_page.html  template.html
nonebot_plugin_WWwiki/html_template/enemy/: out_page.html  template.html
nonebot_plugin_WWwiki/html_template/gift/: out_page.html  template.html
nonebot_plugin_WWwiki/html_template/materialcard/: out_page.html  outpage.html  template.html
nonebot_plugin_WWwiki/html_template/recommendation/: out_page.html  template.html
nonebot_plugin_WWwiki/html_template/rolecard/: out_page.html  rolecard.html  template(1).html  template.html
nonebot_plugin_WWwiki/html_template/skllcard/: out_page.html  template.html
nonebot_plugin_WWwiki/html_template/tale/: out_page.html  template.html
nonebot_plugin_WWwiki/html_template/timing/: template.html
nonebot_plugin_WWwiki/html_template/weapon/: out_page.html  template.html
nonebot_plugin_WWwiki/html_template/yituliu/: template.html
nonebot_plugin_WWwiki/pil_draw/: config.py  draw.py  tools.py
