[tool.poetry]
name = "nonebot-plugin-WWwiki"
version = "0.3.2"
description = "发送kurobbs的数据"
authors = ["shiyingyingjiang <2798134864@qq.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "nonebot_plugin_WWwiki"}]
homepage = "https://github.com/shi-yingyingjiang/nonebot-plugin-WWwiki"
repository = "https://github.com/shi-yingyingjiang/nonebot-plugin-WWwiki"


[tool.poetry.dependencies]
python = ">=3.9"
nonebot2 = { version = ">=2.3.0", extras = ["httpx"] }
jinja2 = ">=3.1.2"
httpx = ">=0.27.0"
pandas = ">=2.0.3"
pydantic = ">=1.10.11"
Pillow = ">=9.4.0"
beautifulsoup4 = ">=4.12.3"
nonebot-plugin-alconna = ">=0.52.2"
nonebot-plugin-uninfo = ">=0.6.5"
nonebot-plugin-htmlrender = ">=0.3.2"
lxml = ">=5.2.2"
nonebot-plugin-apscheduler = ">=0.5.0"
matplotlib = ">=3.10.0"

[tool.poetry.dev-dependencies]
nonebot2 = { version = ">=2.3.2", extras = ["fastapi", "uvicorn"] }
nonebot-adapter-onebot = ">=2.4.4"


[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["nonebot_plugin_WWwiki"]

[tool.pdm.dev-dependencies]
dev = [
    "nonebot2[fastapi,uvicorn]>=2.3.2",
    "nonebot-adapter-onebot>=2.4.4",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
name = "nonebot-plugin-WWwiki"
version = "0.3.2"
description = "发送kurobbs的数据"
authors = [
    {name = "rf_tar_railt", email = "3165388245@qq.com"},
    {name = "shiyingyingjiang", email = "2798134864@qq.com"},
]
dependencies = [
    "jinja2>=3.1.2",
    "pandas>=2.0.3",
    "pydantic>=1.10.11",
    "Pillow>=9.4.0",
    "beautifulsoup4>=4.12.3",
    "nonebot2[httpx]>=2.3.0",
    "nonebot-plugin-alconna>=0.52.2",
    "nonebot-plugin-uninfo>=0.6.5",
    "nonebot-plugin-htmlrender>=0.3.2",
    "nonebot-plugin-apscheduler>=0.5.0",
    "lxml>=5.2.2",
    "matplotlib>=3.10.0", 
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
homepage = "https://github.com/shi-yingyingjiang/nonebot-plugin-WWwiki"
repository = "https://github.com/shi-yingyingjiang/nonebot-plugin-WWwiki"
